--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.17",
+    "lightweight-charts": "^3.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
